day12-ingress/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ingress-backend
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ingress-backend

  template:
    metadata:
      labels:
        app: ingress-backend

    spec:
      containers:
        - name: backend
          image: k8s-ingress-backend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 5
