day12-ingress/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ingress-frontend
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ingress-frontend

  template:
    metadata:
      labels:
        app: ingress-frontend

    spec:
      containers:
        - name: frontend
          image: k8s-ingress-frontend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
