day12-ingress/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ingress-backend-service
  namespace: dev

spec:
  type: ClusterIP

  selector:
    app: ingress-backend

  ports:
    - port: 5000
      targetPort: 5000
