day12-ingress/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ingress-frontend-service
  namespace: dev

spec:
  type: ClusterIP

  selector:
    app: ingress-frontend

  ports:
    - port: 80
      targetPort: 80
